<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:padding="10dp"
    tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_purple"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="16dp"
                android:paddingRight="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:src="@drawable/profil"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/myprofile"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_myprofile"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:background="@drawable/bg_btn_purple"
                        android:text="@string/kliklebihlanjut"/>

                </LinearLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:src="@drawable/culinary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/culinary"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_culinary"
                            android:layout_width="130dp"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:background="@drawable/bg_btn_purple"
                            android:text="@string/kliklebihlanjut"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:src="@drawable/koreandrama"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/koreandrama"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_koreandrama"
                            android:layout_width="130dp"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:background="@drawable/bg_btn_purple"
                            android:text="@string/kliklebihlanjut"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:src="@drawable/cheesetea"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cheesetea"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_cheesetea"
                            android:layout_width="130dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:background="@drawable/bg_btn_purple"
                            android:text="@string/kliklebihlanjut"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>